# pdfcleaner

./: .env.example  .gitignore  README.md  pyproject.toml
src/pdfcleanerx/: __init__.py  cli.py  config.py  converter.py  exceptions.py  logging_setup.py  models.py
src/pdfcleanerx/cleaners/: __init__.py  base.py  heading.py  line_wrap.py  page_number.py  pipeline.py  whitespace.py
src/pdfcleanerx/extractor/: __init__.py  base.py  pdfplumber_extractor.py
src/pdfcleanerx/formatter/: __init__.py  base.py  markdown.py
tests/: conftest.py
tests/fixtures/: generate_fixture.py
tests/integration/: test_converter.py
tests/unit/: test_cleaners.py  test_config.py  test_extractor.py  test_formatter.py
