[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfcleaner"
version = "0.1.0"
description = "Convert messy PDF-extracted text into clean Markdown files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Naman Bhola", email = "bhola.naman02@gmail.com" }]
keywords = ["pdf", "markdown", "text-cleaning", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "pdfplumber>=0.10.0",
    "typer[all]>=0.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "reportlab>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
pdfcleaner = "pdfcleanerx.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/pdfcleaner"
Repository = "https://github.com/yourusername/pdfcleaner"
Issues = "https://github.com/yourusername/pdfcleaner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfcleanerx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pdfcleanerx --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src/pdfcleanerx"]
